k8s/core/enki-core.yaml
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: enki-core
  annotations:
    enki.services/git-version: ${ENKI_CORE_VERSION}
spec:
  replicas: 1
  revisionHistoryLimit: 2
  progressDeadlineSeconds: 300
  template:
    metadata:
      labels:
        app: enki-core
    spec:
      containers:
      - name: enki-core
        image: ${REGISTRY}enki/core:${ENKI_CORE_VERSION}
        readinessProbe:
          httpGet:
            path: /api/healthcheck
            port: 80
        ports:
        - name: enki-core
          containerPort: 80
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
---
kind: Service
apiVersion: v1
metadata:
  name: enki-core
spec:
  type: NodePort
  ports:
  - name: enki-core-http
    port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: enki-core
