k8s/core/pg-core.yaml
---
# Headless service to act as namespace for the pg-core StatefulSet below.
apiVersion: v1
kind: Service
metadata:
  name: pg-core-ns
  labels:
    app: pg-core
spec:
  type: ClusterIP
  clusterIP: None
---
apiVersion: apps/v1beta1
kind: StatefulSet
metadata:
  name: pg-core
  annotations:
    enki.services/git-version: ${POSTGRES_VERSION}
spec:
  replicas: 1
  revisionHistoryLimit: 2
  serviceName: pg-core-ns
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: pg-core
    spec:
      containers:
      - name: postgres
        image: ${REGISTRY}enki/postgres:${POSTGRES_VERSION}
        readinessProbe:
          exec:
            command: ['sh', '-c', 'pg_isready -U postgres -h $(hostname -f)']
        livenessProbe:
          exec:
            command: ['sh', '-c', 'pg_isready -U postgres -h $(hostname -f)']
          failureThreshold: 3
          periodSeconds: 30
          timeoutSeconds: 30
        resources:
          requests:
            memory: "256Mi"
          limits:
            memory: "512Mi"
        volumeMounts:
          - name: efs-pvc
            mountPath: "/data/postgresql"
      restartPolicy: Always
      volumes:
        - name: efs-pvc
          persistentVolumeClaim:
            claimName: pg-core-store
---
# An actual general service to act as an endpoint for postgres.
apiVersion: v1
kind: Service
metadata:
  name: pg-core
  labels:
    app: pg-core
spec:
  type: NodePort
  ports:
  - port: 5432
    targetPort: 5432
  selector:
    app: pg-core
