k8s/core/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: core-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/auth-realm: Authentication Required - Enki
    nginx.ingress.kubernetes.io/auth-secret: enki-basic-auth
    nginx.ingress.kubernetes.io/auth-type: basic
    cert-manager.io/cluster-issuer: letsencrypt-prod
    cert-manager.io/acme-challenge-type: http01
spec:
  tls:
  - secretName: core-enki-tls
    hosts:
    - enki.${K8S_ZONE}
  rules:
  - host: enki.${K8S_ZONE}
    http:
      paths:
      - path: /
        backend:
          serviceName: enki-core
          servicePort: enki-core-http
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: hydra-ingress
  annotations:
    ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: nginx
    certmanager.k8s.io/cluster-issuer: "letsencrypt-prod"
    certmanager.k8s.io/acme-challenge-type: http01
spec:
  tls:
  - secretName: hydra-enki-tls
    hosts:
    - hydra.${K8S_ZONE}
  rules:
  - host: hydra.${K8S_ZONE}
    http:
      paths:
      - path: /
        backend:
          serviceName: hydra
          servicePort: hydra-http
